Lagt til og kjørt ktlint